--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<html>
 <h1>привет</h1>
+<h2>ой-ой-ой</h2>
+<h3>я иду домой</h3>
+<p>Плорврпвркпшгрукгпраущгкшрпашгукрашгуркгшарукшграшгукра</p>
+</html>
